--- a/Src/template/common.html
+++ b/Src/template/common.html
@@ -12,7 +12,6 @@
   <script src="/Scripts/flexible.js"></script>
 </head>
 <body>
-  <link rel="stylesheet" href="/Content/css/600106/home/demo.css">
-i'm ok!
+  <%= contents %>
 </body>
 </html>
